Fixed packages and versions

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="1dp"
         android:background="@drawable/searchview_bg"
         android:queryBackground="@android:color/transparent"
-        android:queryHint="Search"
+        android:queryHint="@string/search_address_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
