--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,8 @@
 
     <fragment
         android:id="@+id/AddressSearchFragment"
-        android:name="com.example.testforxml.AddressSearchFragment"
+        android:name="com.devarthur4718.searchaddressapp.featureAddressSearch.presentation.Address.AddressSearchFragment"
         android:label="Wtest - Home"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.testforxml.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/AddressSearchFragment" />
+        tools:layout="@layout/fragment_search_address">
     </fragment>
 </navigation>
