--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/AddressSearchFragment"
-        android:name="com.devarthur4718.searchaddressapp.featureAddressSearch.presentation.Address.AddressSearchFragment"
+        android:name="com.devarthur4718.searchaddressapp.featureAddressSearch.presentation.address.AddressSearchFragment"
         android:label="Wtest - Home"
         tools:layout="@layout/fragment_search_address">
     </fragment>
